--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 300
+      }
     }
   ],
   "routes": [
@@ -25,10 +28,5 @@
       "path": "/api/generate-images", 
       "schedule": "0 5 * * *"
     }
-  ],
-  "functions": {
-    "server.js": {
-      "maxDuration": 300
-    }
-  }
+  ]
 }
