Vercel API 라우팅 수정 - 404 오류 해결
 수정사항:
- api/png-files.js 추가 (Vercel API Routes 구조)
- api/generate-from-sheets.js 추가
- vercel.json 라우팅 규칙 개선
- 각 API 엔드포인트별 명시적 라우팅

 해결된 문제:
- /api/png-files 404 오류
- /api/generate-from-sheets 404 오류
- JSON 파싱 오류 (Unexpected token 'T')
- 서버 라우팅 문제

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,20 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server.js"
+      "src": "/api/png-files",
+      "dest": "/api/png-files.js"
+    },
+    {
+      "src": "/api/generate-from-sheets",
+      "dest": "/api/generate-from-sheets.js"
+    },
+    {
+      "src": "/api/generate-images",
+      "dest": "/api/generate-images.js"
+    },
+    {
+      "src": "/generated-png/(.*)",
+      "dest": "/generated-png/$1"
     },
     {
       "src": "/(.*)",
