SVG 템플릿 경로 문제 해결
 수정사항:
- vercel.json에 'Frame 3.svg' 파일 명시적 포함 (includeFiles)
- Vercel 환경과 로컬 환경을 구분하는 경로 설정
- process.env.VERCEL 환경변수로 배포 환경 감지
- process.cwd() 사용으로 Vercel에서 올바른 경로 참조

 해결 목표:
- 500 Internal Server Error (ENOENT: Frame 3.svg) 완전 해결
- 로컬과 Vercel 환경 모두에서 안정적 동작

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "server.js",
       "use": "@vercel/node",
       "config": {
-        "maxDuration": 300
+        "maxDuration": 300,
+        "includeFiles": ["Frame 3.svg"]
       }
     }
   ],
