--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "vercel-build": "echo 'Build complete'"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
-    "csv-parser": "^3.0.0",
     "puppeteer": "^21.3.6",
     "sharp": "^0.32.6"
   },
