--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "vegavery-map-generator",
+  "name": "vgvr-map-generator",
   "version": "1.0.0",
-  "description": "Google Sheets 기반 팀별 지도 이미지 자동 생성기",
+  "description": "VGVR Map Image Generator with Sharp",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'No build step required'",
+    "dev": "nodemon server.js",
     "vercel-build": "echo 'Build complete'"
-  },
-  "dependencies": {
-    "csv-parser": "^3.0.0",
-    "express": "^4.18.2",
-    "googleapis": "^126.0.1",
-    "puppeteer": "^21.3.6",
-    "sharp": "^0.32.6"
   },
   "engines": {
     "node": "22.x"
   },
+  "dependencies": {
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "googleapis": "^128.0.0",
+    "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
   "keywords": [
-    "google-sheets",
-    "maps",
-    "image-generation",
-    "svg",
-    "png",
-    "automation"
+    "vgvr",
+    "map",
+    "image-generator",
+    "sharp",
+    "vercel"
   ],
-  "author": "VegaVery Team",
+  "author": "VGVR Team",
   "license": "MIT"
 }
