강제 재배포 - 프로젝트명 변경 및 더미 파일 추가로 Vercel 캐시 무력화

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vgvr-map-generator",
+  "name": "vgvr-map-final",
   "version": "1.0.0",
   "description": "VGVR Map Image Generator with Sharp",
   "main": "server.js",
