Vercel 설정 수정 - 정적 사이트 + API 함수 방식으로 변경, 엔트리포인트 오류 해결

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "vgvr-map-final",
   "version": "1.0.0",
   "description": "VGVR Map Image Generator with Sharp",
-  "main": "server.js",
+  "main": "public/index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "vercel dev",
     "vercel-build": "echo 'Build complete'"
   },
   "engines": {
